--- a/Semana 8/cidade.html
+++ b/Semana 8/cidade.html
@@ -11,13 +11,12 @@ function mostra(frase) {
     pulaLinha;
 }
 
-function sorteia(n) {
-    return Math.round(Math.random() * n);
+function sorteia(frase) {
+    return (string.random(frase));
 }
 
 var numeroPensado = sorteia(10);
 
-var tentativas = 1;
 var tentativas = 1;
 
 while(tentativas <= 3) {
