--- a/Semana 8/random_city.html
+++ b/Semana 8/random_city.html
@@ -1,4 +1,4 @@
-<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+<meta charset="UTF-8">
 
 <script>
 function pulaLinha() {
@@ -11,6 +11,10 @@ function mostra(frase) {
     pulaLinha();
 }
 
+
+var cidadeViagem = (prompt(random * (list))){
+    var 
+};
 
 
 </script>
