--- a/Semana 8/tabuada.html
+++ b/Semana 8/tabuada.html
@@ -11,6 +11,12 @@ function mostra(frase) {
     pulaLinha();
 }
 
+for(var multiplicador = 1; multiplicador <= 10; multiplicador++) {
+
+    mostra(7 * multiplicador);
+}
+
+mostra ("fim");
 
 
 </script>
